Fix minor problems.